kubernetes/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: contoso-ship-manager-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: contoso-ship-manager-frontend
  template:
    metadata:
      labels:
        app: contoso-ship-manager-frontend
    spec:
      containers:
        - image: mcr.microsoft.com/mslearn/samples/contoso-ship-manager:frontend
          name: contoso-ship-manager-frontend
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi
          ports:
            - containerPort: 80
              name: http
          volumeMounts:
            - name: config
              mountPath: /usr/src/app/dist/config.js
              subPath: config.js
      volumes:
        - name: config
          configMap:
            name: frontend-config
---
apiVersion: v1
kind: Service
metadata:
  name: contoso-ship-manager-frontend
spec:
  selector:
    app: contoso-ship-manager-frontend
  ports:
    - name: http
      port: 80
      targetPort: 80
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: contoso-ship-manager-frontend
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
spec:
  rules:
    - host: contoso-ship-manager-frontend.03730aac165a459da35a.eastus.aksapp.io
      http:
        paths:
          - path: /
            backend:
              serviceName: contoso-ship-manager-frontend
              servicePort: http
